--- a/Frontback.html
+++ b/Frontback.html
@@ -349,8 +349,8 @@ localStorage.clear();</p>
 		<p>git --version // узнать версию гита<br>
 		git clone // скачать репозиторий в локальную папку</p>
 		git status // статус проекта
-		A¹ git add "file.name" // добавление файла в репозиторий
-		A² git commit -m "commit name" //
+		A¹ git add "file.name" (-A == all) // добавление файла в репозиторий
+		A² git commit -m "commit name" // (ESC :wq ENTER)
 		A³ git push // добавление файла на гит (может спросить пароль)
 		git pull // скачать файлы с гита
 	</article>
